правки по 9му дз

--- a/src/main/resources/db/changelog/db.changelog-master.yaml
+++ b/src/main/resources/db/changelog/db.changelog-master.yaml
@@ -15,13 +15,6 @@ databaseChangeLog:
                     primaryKey: true
                     nullable: false
               - column:
-                  name: user_id
-                  type: int
-                  autoIncrement: true
-                  constraints:
-                    primaryKey: true
-                    nullable: false
-              - column:
                   name: description
                   type: varchar (512)
                   constraints:
@@ -78,3 +71,17 @@ databaseChangeLog:
               - column:
                   name: role
                   value: "ADMIN"
+  - changeSet:
+      id: 004
+      author: iv.khard
+      changes:
+        - addColumn:
+            tableName: task
+            columns:
+              - column:
+                  name: user_id
+                  type: int
+                  autoIncrement: true
+                  constraints:
+                    primaryKey: false
+                    nullable: false
