--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,10 @@ spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
 
+myWork.ext.url=http://localhost:8081
+myWork.ext.user=admin
+myWork.ext.password=admin
+feign.client.config.myWork.connectTimeout=10000
+feign.client.config.myWork.readTimeout=10000
+
 spring.main.banner-mode=log
