--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,11 @@ spring.datasource.password=secret
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=validate
 
-myWork.ext.url=http://localhost:8081
-myWork.ext.user=admin
-myWork.ext.password=admin
+server.port=8082
+
+myWork.ext.url=http://localhost:8090
+myWork.ext.user=user22
+myWork.ext.password=user22
 feign.client.config.myWork.connectTimeout=10000
 feign.client.config.myWork.readTimeout=10000
 
